--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <button id="stop">Stop</button>
 <button id="restart">restart</button>
 <div id="score"> score: </div>
-<div id="span">hello : </div>
+<div id="span" class="text-center">hello : </div>
 
   <button type="button" id="level1" > Level 1</button>
   <button type="button" id="level2" >Level 2</button>
