removeNumber in div to set input

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="number-container"></div>
+  
+  <table id="number-container" class="text-center"></table>
   <div class="text-center">
     <div class="timeRanges"></div>
     <input type="text" id="name" required></input>
