--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>4x4 Sudoku</title>
+		<title> Sudoku</title>
 		<meta charset="UTF-8">
         <style>body {
             background-color: #9ED3DE;
@@ -64,7 +64,6 @@
         .quad {
             border: 1px solid black;
         }
-        
         #btnUndo {
             color: red;
             width: 100px;
