--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button id="set">Set</button>
     <button id="stop">Stop</button>
     <div id="controls">
-      <button  onclick="undo()" id="btnUndo">Undo All</button>
+      <button  onclick="undo()" id="btnUndo" style="display: none;">Undo All</button>
       <button onclick="eraseSelectedCell()"  id="erase-btn" style="display: none;" >Erase</button>
     </div>    
     <button id="restart">restart</button><br>
